--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
 
 		</div> <!-- end of MOB -->
 
+		<div id="entirety"></div>
+
 		<div id="topONE">
 
 			<div id="bgONE"></div>
@@ -136,7 +138,7 @@
 
 				</div>
 
-			</div> <!-- end of header -->
+			</div>
 
 			<div id="title">
 
