--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
 
 <body>
 
-	<div id="container">
+	<div id="B-container">
 
-		<div id="navMob">
+		<div id="C-navMob">
 
-			<p id="burger">☰</p>
+			<p id="navMobBurger">☰</p>
 
-			<div id="menu">
+			<div id="navMobMenu">
 
-				<div id="navContent">
+				<div id="navMobContent">
 
-					<div id="account">
+					<div id="navMobAccount">
 
-						<div id="iconsTWO">
+						<div id="navMobIcons">
 
 							<div id="user"></div>
 
@@ -45,25 +45,25 @@
 					</div>
 
 					<ul>
-						<p id="homeONE">home</p>
+						<p id="home">home</p>
 
-						<li><span id="rest"> about us</span></li>
+						<li><span>about us</span></li>
 
-						<li><span id="rest"> products</span></li>
+						<li><span>products</span></li>
 
-						<li><span id="rest"> blog</span></li>
+						<li><span>blog</span></li>
 
-						<li><span id="rest"> contacts</span></li>
+						<li><span>contacts</span></li>
 
 					</ul>
 
-					<div id="follow">
+					<div id="navMobFollowUsOn">
 
 						<p>follow us on &nbsp; -</p>
 
-						<div id="iconsONE">
+						<div id="icons">
 
-							<div id="insta"></div>
+							<div id="instagram"></div>
 
 							<div id="x"></div>
 
@@ -75,7 +75,7 @@
 
 					</div>
 
-					<button id="closeONE">close</button>
+					<button id="navMobClose">close</button>
 
 				</div> <!-- end of navMOB -->
 
@@ -83,19 +83,19 @@
 
 		</div>
 
-		<div id="topONE">
+		<div id="D-topOne">
 
-			<div id="bgONE"></div>
+			<div id="topOneBgOne"></div>
 
-			<div id="header">
+			<div id="topOneHeader">
 
-				<div id="left">
+				<div id="topOneLeft">
 
 					<p>follow us on &nbsp; -</p>
 
-					<div id="iconsONE">
+					<div id="topOneIconsOne">
 
-						<div id="insta"></div>
+						<div id="instagram"></div>
 
 						<div id="x"></div>
 
@@ -107,28 +107,28 @@
 
 				</div>
 
-				<div id="mid">
+				<div id="topOneMid">
 
 					<div id="logo"></div>
 
 					<ul>
-						<p id="homeONE">home</p>
+						<p id="home">home</p>
 
-						<li><span id="rest"> about us</span></li>
+						<li><span>about us</span></li>
 
-						<li><span id="rest"> products</span></li>
+						<li><span>products</span></li>
 
-						<li><span id="rest"> blog</span></li>
+						<li><span>blog</span></li>
 
-						<li><span id="rest"> contacts</span></li>
+						<li><span>contacts</span></li>
 
 					</ul>
 
 				</div>
 
-				<div id="right">
+				<div id="topOneRight">
 
-					<div id="iconsTWO">
+					<div id="topOneIconsTwo">
 
 						<div id="user"></div>
 
@@ -142,7 +142,7 @@
 
 			</div>
 
-			<div id="title">
+			<div id="topOneTitle">
 
 				<p id="one">Natural</p>
 
@@ -155,19 +155,19 @@
 
 		</div> <!-- end of topONE -->
 
-		<div id="topTWO">
+		<div id="E-topTwo">
 
-			<div id="bgONE"></div>
+			<div id="topTwobgOne"></div>
 
-			<div id="bgTWO"></div>
+			<div id="topTwobgTwo"></div>
 
 		</div> <!-- end of topTWO-->
 
-		<div id="topTHREE">
+		<div id="F-topThree">
 
-			<div id="left">
+			<div id="topThreeLeft">
 
-				<div id="texts">
+				<div id="topThreeTexts">
 
 					<p id="one">arabica & robusta</p>
 
@@ -179,7 +179,7 @@
 
 				</div>
 
-				<div id="contact">
+				<div id="topThreeContacts">
 
 					<div id="download">
 
@@ -199,7 +199,7 @@
 
 				</div>
 
-				<div id="buttons">
+				<div id="topThreeButtons">
 
 					<button id="read">read more</button>
 
@@ -209,95 +209,85 @@
 
 			</div>
 
-			<div id="right">
+			<div id="topThreeRight">
 
-				<div id="pic">
+				<p id="one">since <span>1967</span></p>
 
-					<p id="one">since <span>1967</span></p>
-
-				</div>
+				<div id="pic"></div>
 
 			</div>
 
 		</div> <!-- end of topTHREE-->
 
-		<div id="midONE">
+		<div id="G-midOne">
 
-			<p id="one">lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex ratione quod quas nesciunt
+			<p id="midOneTitle">lorem ipsum, dolor sit amet consectetur adipisicing elit. Ex ratione quod quas nesciunt
 				aspernatur est possimus, magni quo praesentium rerum minus assumenda voluptas vitae quasi culpa eum?
 				dolor, nulla suscipit!</p>
 
-			<div id="allinone">
+			<div id="midOneWheelsHolder">
 
-				<div id="FIRST">
+				<div id="midOneWheelOne">
 
-					<div id="wheelONE">
+					<div id="pic">
 
-						<div id="pic">
+						<div id="bgOne"></div>
 
-							<div id="AG"></div>
-
-							<p id="two">01</p>
-
-						</div>
-
-						<p id="three">arabica green</p>
-
-						<p id="four">curabitur semper erat a lacus consequat, sit amet quam convallis.</p>
+						<p id="two">01</p>
 
 					</div>
 
-					<div id="wheelTWO">
+					<p id="three">arabica green</p>
 
-						<div id="pic">
-
-							<div id="AG"></div>
-
-							<p id="two">02</p>
-
-						</div>
-
-						<p id="three">arabica roasted</p>
-
-						<p id="four">praesent at faucibus justo, eu semper massa viverra luctus.</p>
-
-					</div>
+					<p id="four">curabitur semper erat a lacus consequat, sit amet quam convallis.</p>
 
 				</div>
 
-				<div id="SECOND">
+				<div id="midOneWheelTwo">
 
-					<div id="wheelTHREE">
+					<div id="pic">
 
-						<div id="pic">
+						<div id="bgTwo"></div>
 
-							<div id="AG"></div>
-
-							<p id="two">03</p>
-
-						</div>
-
-						<p id="three">robusta roasted</p>
-
-						<p id="four">fusce venenatis ante ac interdum faucibus proin nunc.</p>
+						<p id="two">02</p>
 
 					</div>
 
-					<div id="wheelFOUR">
+					<p id="three">arabica roasted</p>
 
-						<div id="pic">
+					<p id="four">praesent at faucibus justo, eu semper massa viverra luctus.</p>
 
-							<div id="AG"></div>
+				</div>
 
-							<p id="two">04</p>
+				<div id="midOneWheelThree">
 
-						</div>
+					<div id="pic">
 
-						<p id="three">mixed sorts</p>
+						<div id="bgThree"></div>
 
-						<p id="four">aenean hendrerit ligula ut facilisis convallis gravida suscipit.</p>
+						<p id="two">03</p>
 
 					</div>
+
+					<p id="three">robusta roasted</p>
+
+					<p id="four">fusce venenatis ante ac interdum faucibus proin nunc.</p>
+
+				</div>
+
+				<div id="midOneWheelFour">
+
+					<div id="pic">
+
+						<div id="bgFour"></div>
+
+						<p id="two">04</p>
+
+					</div>
+
+					<p id="three">mixed sorts</p>
+
+					<p id="four">aenean hendrerit ligula ut facilisis convallis gravida suscipit.</p>
 
 				</div>
 
