--- a/index.html
+++ b/index.html
@@ -91,8 +91,6 @@
 
 				<div id="topOneLeft">
 
-					<p>follow us on &nbsp; -</p>
-
 					<div id="topOneIconsOne">
 
 						<div id="instagram"></div>
@@ -153,7 +151,7 @@
 
 			</div>
 
-		</div> <!-- end of topONE -->
+		</div>
 
 		<div id="E-topTwo">
 
@@ -161,7 +159,7 @@
 
 			<div id="topTwobgTwo"></div>
 
-		</div> <!-- end of topTWO-->
+		</div>
 
 		<div id="F-topThree">
 
@@ -217,7 +215,7 @@
 
 			</div>
 
-		</div> <!-- end of topTHREE-->
+		</div>
 
 		<div id="G-midOne">
 
@@ -293,36 +291,36 @@
 
 			</div>
 
-		</div> <!-- end of midONE -->
+		</div>
 
-		<div id="midTWO">
+		<div id="H-midTwo">
 
-			<div id="bgs">
+			<div id="midTwoBackgrounds">
 
-				<div id="bgONE">
+				<div id="bgOne">
 
 					<div id="stamp"></div>
 
 				</div>
 
-				<div id="bgTWO">
+				<div id="bgTwo">
 
-					<p id="one">divine</p>
+					<!-- <p id="one">divine</p> -->
 
-					<p id="two">aroma in every sip</p>
+					<p id="one">divine <br> <span>aroma in every sip</span></p>
 
-					<p id="three">maecenas dapibus mattis eros, at fermentum sapien malesuada sit amet. quisque in
+					<p id="two">maecenas dapibus mattis eros, at fermentum sapien malesuada sit amet. quisque in
 						sollicitudin eros.</p>
 
 					<button id="read">read more</button>
 
 				</div>
 
-				<div id="bgTHREE"></div>
+				<div id="bgThree"></div>
 
 			</div>
 
-		</div> <!-- end of midTWO -->
+		</div>
 
 		<div id="midTHREE">
 
