--- a/index.html
+++ b/index.html
@@ -322,17 +322,17 @@
 
 		</div>
 
-		<div id="midTHREE">
+		<div id="I-midThree">
 
-			<div id="allinone">
+			<div id="midThreeAllInOne">
 
-				<div id="left">
+				<div id="midThreeLeft">
 
-					<div id="illuONE">
+					<div id="illuOne">
 
 						<div id="pic"></div>
 
-						<div id="desc">
+						<div id="info">
 
 							<p id="one">pure grades</p>
 
@@ -343,11 +343,11 @@
 
 					</div>
 
-					<div id="illuTWO">
+					<div id="illuTwo">
 
 						<div id="pic"></div>
 
-						<div id="desc">
+						<div id="info">
 
 							<p id="one">wide assortment</p>
 
@@ -358,11 +358,11 @@
 
 					</div>
 
-					<div id="illuTHREE">
+					<div id="illuThree">
 
 						<div id="pic"></div>
 
-						<div id="desc">
+						<div id="info">
 
 							<p id="one">proper roasting</p>
 
@@ -375,15 +375,15 @@
 
 				</div>
 
-				<div id="mid"></div>
+				<div id="midThreeMid"></div>
 
-				<div id="right">
+				<div id="midThreeRight">
 
-					<div id="illuONE">
+					<div id="illuOne">
 
 						<div id="pic"></div>
 
-						<div id="desc">
+						<div id="info">
 
 							<p id="one">high quality </p>
 
@@ -394,11 +394,11 @@
 
 					</div>
 
-					<div id="illuTWO">
+					<div id="illuTwo">
 
 						<div id="pic"></div>
 
-						<div id="desc">
+						<div id="info">
 
 							<p id="one">excellent grinding</p>
 
@@ -409,11 +409,11 @@
 
 					</div>
 
-					<div id="illuTHREE">
+					<div id="illuThree">
 
 						<div id="pic"></div>
 
-						<div id="desc">
+						<div id="info">
 
 							<p id="one">awesome aroma</p>
 
@@ -428,7 +428,7 @@
 
 			</div>
 
-		</div> <!-- end of midTHREE -->
+		</div>
 
 		<div id="midFOUR">
 
