--- a/index.html
+++ b/index.html
@@ -430,19 +430,19 @@
 
 		</div>
 
-		<div id="midFOUR">
+		<div id="J-midFour">
 
-			<div id="bg"></div>
+			<div id="midFourBg"></div>
 
 			<p id="one">how we prepare our beans</p>
 
 			<button id="play">play video</button>
 
-		</div> <!-- end of midFOUR -->
+		</div>
 
-		<div id="bottomONE">
+		<div id="K-bottomOne">
 
-			<div id="bg"></div>
+			<div id="bottomOneBg"></div>
 
 			<div id="stats">
 
@@ -480,7 +480,7 @@
 
 			</div>
 
-		</div> <!-- end of bottomONE -->
+		</div>
 
 		<div id="bottomTWO">
 
