--- a/index.html
+++ b/index.html
@@ -482,11 +482,11 @@
 
 		</div>
 
-		<div id="bottomTWO">
+		<div id="L-bottomTwo">
 
-			<div id="bg"></div>
+			<div id="bottomTwoBg"></div>
 
-			<div id="title">
+			<div id="bottomTwoTitle">
 
 				<p id="one">online store</p>
 
@@ -497,13 +497,13 @@
 
 			</div>
 
-			<div id="midSEC">
+			<div id="bottomTwoMidSec">
 
 				<div id="left"></div>
 
 				<div id="right">
 
-					<div id="allONE">
+					<div id="allInOne">
 
 						<div id="stars">
 
@@ -567,7 +567,7 @@
 
 							</div>
 
-							<div id="priceONE">
+							<div id="overviewPrice">
 
 								<p id="one">$ 25.99</p>
 
@@ -578,13 +578,13 @@
 
 							</div>
 
-						</div>
+							<div id="overviewButtons">
 
-						<div id="buttons">
+								<button id="add">add to cart</button>
 
-							<button id="add">add to cart</button>
+								<button id="info">more info</button>
 
-							<button id="info">more info</button>
+							</div>
 
 						</div>
 
@@ -594,7 +594,7 @@
 
 			</div>
 
-			<div id="bottom">
+			<div id="bottomTwoBottom">
 
 				<div id="first">
 
@@ -623,9 +623,9 @@
 
 					<p id="type">peru whole bean</p>
 
-					<p id="priceTWO">$42.49</p>
+					<p id="priceOne">$42.49</p>
 
-					<button id="cartSMALL">add to cart</button>
+					<button id="cartOne">add to cart</button>
 
 				</div>
 
@@ -655,9 +655,9 @@
 
 					<p id="type">ethiopian organic mix</p>
 
-					<p id="priceTWO">$13.49</p>
+					<p id="priceTwo">$13.49</p>
 
-					<button id="cartSMALL">add to cart</button>
+					<button id="cartTwo">add to cart</button>
 
 				</div>
 
@@ -687,9 +687,9 @@
 
 					<p id="type">columbia organic</p>
 
-					<p id="priceTWO">$25.00</p>
+					<p id="priceThree">$25.00</p>
 
-					<button id="cartSMALL">add to cart</button>
+					<button id="cartThree">add to cart</button>
 
 				</div>
 
@@ -719,15 +719,15 @@
 
 					<p id="type">ethiopian robusta</p>
 
-					<p id="priceTWO">$11.49</p>
+					<p id="priceFour">$11.49</p>
 
-					<button id="cartSMALL">add to cart</button>
+					<button id="cartFour">add to cart</button>
 
 				</div>
 
 			</div>
 
-		</div> <!-- end of bottomTWO -->
+		</div>
 
 		<div id="bottomTHREE">
 
