--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<title>Kaffa Coffee</title>
 
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-	<link rel="icon" type="image/x-icon" href="/images/favicon.svg">
+	<link rel="icon" type="image/x-icon" href="/images/svgs/favicon.svg">
 	<script defer type="text/javascript" src="/js/script.js"></script>
 
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -729,94 +729,88 @@
 
 		</div>
 
-		<div id="bottomTHREE">
+		<div id="M-bottomThree">
 
-			<div id="bg"></div>
+			<div id="bottomThreeBg"></div>
 
-			<div id="all">
+			<div id="allInOne">
 
-				<div id="upperSEC">
+				<div id="left">
 
-					<div id="left">
+					<div id="pic"></div>
 
-						<div id="pic"></div>
+					<p id="leftOne">etiam consequat ullamcorper, euismod metus sit amet, tristique justo. Vestibulum
+						mattis nisi ut.</p>
 
-						<p id="one">etiam consequat ullamcorper, euismod metus sit amet, tristique justo. Vestibulum
-							mattis nisi ut.</p>
+					<div id="icons">
 
-						<div id="icons">
+						<div id="instagram"></div>
 
-							<div id="insta"></div>
+						<div id="x"></div>
 
-							<div id="x"></div>
+						<div id="telegram"></div>
 
-							<div id="telegram"></div>
-
-							<div id="youtube"></div>
-
-						</div>
-
-					</div>
-
-					<div id="mid">
-
-						<p id="title">contact info</p>
-
-						<div id="location">
-
-							<div id="pic"></div>
-
-							<p id="one"><span>our location:</span><br>Rio de Janeiro, RJ Brazil, 04103 Route</p>
-
-						</div>
-
-						<div id="phone">
-
-							<div id="pic"></div>
-
-							<p id="one"><span>phone numbers:</span><br>+966 57 5894 789<br>+966 53 5115 888</p>
-
-						</div>
-
-						<p id="three"></p>
-
-					</div>
-
-					<div id="right">
-
-						<p id="title">subscribe</p>
-
-						<div id="email">
-
-							<input type="email" placeholder="enter your email">
-
-							<button id="subscribe">subscribe</button>
-
-						</div>
-
-						<div id="agreement">
-
-							<input type="checkbox">
-
-							<p id="one">I have read and agree to the terms & conditions</p>
-
-						</div>
+						<div id="youtube"></div>
 
 					</div>
 
 				</div>
 
-				<div id="lowerSEC">
+				<div id="mid">
 
-					<p id="one">©2024 Mahmoud Taha</p>
+					<p id="title">contact info</p>
+
+					<div id="location">
+
+						<div id="pic"></div>
+
+						<p id="midOne"><span>our location:</span><br>Rio de Janeiro, RJ Brazil, 04103 Route</p>
+
+					</div>
+
+					<div id="phone">
+
+						<div id="pic"></div>
+
+						<p id="midTwo"><span>phone numbers:</span><br>+966 57 5894 789<br>+966 53 5115 888</p>
+
+					</div>
+
+				</div>
+
+				<div id="right">
+
+					<p id="title">subscribe</p>
+
+					<div id="email">
+
+						<input type="email" placeholder="enter your email">
+
+						<button id="subscribe">subscribe</button>
+
+					</div>
+
+					<div id="agreement">
+
+						<input type="checkbox">
+
+						<p id="rightOne">I have read and agree to the terms & conditions</p>
+
+					</div>
 
 				</div>
 
 			</div>
 
-		</div> <!-- end of bottomTHREE -->
+		</div>
 
-	</div> <!-- end of container-->
+		<div id="footer">
+
+			<p id="one">©2024 Mahmoud Taha</p>
+
+		</div>
+
+	</div>
 
 </body>
 
