--- a/index.html
+++ b/index.html
@@ -22,64 +22,100 @@
 
 	<div id="B-container">
 
-		<div id="C-navMob">
+		<div id="backToTopFunction"></div>
 
-			<p id="navMobBurger">☰</p>
+		<div id="navs">
 
-			<div id="navMobMenu">
+			<div id="navBar">
 
-				<div id="navMobContent">
+				<div id="leftSide"></div>
 
-					<div id="navMobAccount">
+				<ul id="mid">
 
-						<div id="navMobIcons">
+					<p id="home">home</p>
 
-							<div id="user"></div>
+					<li><span>about us</span></li>
 
-							<div id="bag"></div>
+					<li><span>products</span></li>
 
-							<div id="search"></div>
+					<li><span>blog</span></li>
+
+					<li><span>contacts</span></li>
+
+				</ul>
+
+				<div id="rightSide">
+
+					<div id="user"></div>
+
+					<div id="bag"></div>
+
+					<div id="search"></div>
+
+				</div>
+
+			</div>
+
+			<div id="navMob">
+
+				<p id="navMobBurger">☰</p>
+
+				<div id="navMobMenu">
+
+					<div id="navMobContent">
+
+						<div id="navMobAccount">
+
+							<div id="navMobIcons">
+
+								<div id="user"></div>
+
+								<div id="bag"></div>
+
+								<div id="search"></div>
+
+							</div>
 
 						</div>
 
-					</div>
+						<ul>
+							<p id="home">home</p>
 
-					<ul>
-						<p id="home">home</p>
+							<li><span>about us</span></li>
 
-						<li><span>about us</span></li>
+							<li><span>products</span></li>
 
-						<li><span>products</span></li>
+							<li><span>blog</span></li>
 
-						<li><span>blog</span></li>
+							<li><span>contacts</span></li>
 
-						<li><span>contacts</span></li>
+						</ul>
 
-					</ul>
+						<div id="navMobFollowUsOn">
 
-					<div id="navMobFollowUsOn">
+							<p>follow us on &nbsp; -</p>
 
-						<p>follow us on &nbsp; -</p>
+							<div id="icons">
 
-						<div id="icons">
+								<div id="instagram"></div>
 
-							<div id="instagram"></div>
+								<div id="x"></div>
 
-							<div id="x"></div>
+								<div id="telegram"></div>
 
-							<div id="telegram"></div>
+								<div id="youtube"></div>
 
-							<div id="youtube"></div>
+							</div>
 
 						</div>
 
+						<button id="navMobClose">close</button>
+
 					</div>
 
-					<button id="navMobClose">close</button>
+				</div>
 
-				</div> <!-- end of navMOB -->
-
-			</div> <!-- end of MOB -->
+			</div>
 
 		</div>
 
@@ -91,17 +127,13 @@
 
 				<div id="topOneLeft">
 
-					<div id="topOneIconsOne">
+					<div id="instagram"></div>
 
-						<div id="instagram"></div>
+					<div id="x"></div>
 
-						<div id="x"></div>
+					<div id="telegram"></div>
 
-						<div id="telegram"></div>
-
-						<div id="youtube"></div>
-
-					</div>
+					<div id="youtube"></div>
 
 				</div>
 
@@ -126,15 +158,11 @@
 
 				<div id="topOneRight">
 
-					<div id="topOneIconsTwo">
+					<div id="user"></div>
 
-						<div id="user"></div>
+					<div id="bag"></div>
 
-						<div id="bag"></div>
-
-						<div id="search"></div>
-
-					</div>
+					<div id="search"></div>
 
 				</div>
 
