--- a/index.html
+++ b/index.html
@@ -30,19 +30,113 @@
 
 				<div id="leftSide"></div>
 
-				<ul id="mid">
+				<div id="midSide">
 
-					<p id="home">home</p>
+					<div id="home">
 
-					<li><span>about us</span></li>
+						<div id="front">
 
-					<li><span>products</span></li>
+							<p>home</p>
 
-					<li><span>blog</span></li>
+							<div id="arrow"></div>
 
-					<li><span>contacts</span></li>
+						</div>
 
-				</ul>
+						<ul id="hidden">
+
+							<li id="homeList">natural coffee</li>
+
+							<li id="homeList">coffee house</li>
+
+							<li id="homeList">coffee shop</li>
+
+							<li id="homeList">craft coffee</li>
+
+							<li id="homeList">narutal coffee rtl</li>
+
+						</ul>
+
+					</div>
+
+					<div id="aboutUs">
+
+						<div id="front">
+
+							<p>about us</p>
+
+							<div id="arrow"></div>
+
+						</div>
+
+						<ul id="hidden">
+
+							<li id="aboutUsList">testimonials</li>
+
+							<li id="aboutUsList">blogs</li>
+
+							<li id="aboutUsList">gallery</li>
+
+							<li id="aboutUsList">reviews</li>
+
+						</ul>
+
+					</div>
+
+					<div id="products">
+
+						<div id="front">
+
+							<p>products</p>
+
+							<div id="arrow"></div>
+
+						</div>
+
+						<ul id="hidden">
+
+							<li id="productsList">peru whole bean</li>
+
+							<li id="productsList">ethiopia organic mix</li>
+
+							<li id="productsList">columbia organic</li>
+
+							<li id="productsList">ethiopia robusta</li>
+
+						</ul>
+
+					</div>
+
+					<div id="blogs">
+
+						<div id="front">
+
+							<p>blogs</p>
+
+							<div id="arrow"></div>
+
+						</div>
+
+						<ul id="hidden">
+
+							<li id="blogsList">testimonials</li>
+
+							<li id="blogsList">fourms</li>
+
+							<li id="blogsList">columbia organic</li>
+
+							<li id="blogsList">ethiopia robusta</li>
+
+						</ul>
+
+					</div>
+
+					<div id="contacts">
+
+						<p>contacts</p>
+
+					</div>
+
+				</div>
 
 				<div id="rightSide">
 
@@ -64,36 +158,81 @@
 
 					<div id="navMobContent">
 
-						<div id="navMobAccount">
+						<div id="navMobFirstSec">
 
-							<div id="navMobIcons">
+							<div id="allInOne">
 
-								<div id="user"></div>
+								<div id="left"></div>
 
-								<div id="bag"></div>
+								<div id="right">
 
-								<div id="search"></div>
+									<div id="user"></div>
+
+									<div id="bag"></div>
+
+									<div id="search"></div>
+
+								</div>
 
 							</div>
 
 						</div>
 
-						<ul>
-							<p id="home">home</p>
+						<div id="navMobSecondSec">
 
-							<li><span>about us</span></li>
+							<div id="navBarHome">
 
-							<li><span>products</span></li>
+								<div id="homeFront">
 
-							<li><span>blog</span></li>
+									<p>home</p>
 
-							<li><span>contacts</span></li>
+									<div id="arrow"></div>
 
-						</ul>
+								</div>
 
-						<div id="navMobFollowUsOn">
+								<ul class="homeLists" id="homeLists">
 
-							<p>follow us on &nbsp; -</p>
+									<li id="homeList">natural coffee</li>
+
+									<li id="homeList">coffee house</li>
+
+									<li id="homeList">coffee shop</li>
+
+									<li id="homeList">craft coffee</li>
+
+									<li id="homeList">narutal coffee rtl</li>
+
+								</ul>
+
+							</div>
+
+							<div id="navBarAboutUs">
+
+								<div id="aboutUsFront">
+
+									<p>about us</p>
+
+									<div id="arrow"></div>
+
+								</div>
+
+								<ul class="aboutUsLists" id="aboutUsLists">
+
+									<li id="aboutUsList">testimonials</li>
+
+									<li id="aboutUsList">blogs</li>
+
+									<li id="aboutUsList">gallery</li>
+
+									<li id="aboutUsList">reviews</li>
+
+								</ul>
+
+							</div>
+
+						</div>
+
+						<div id="navMobSocialMedia">
 
 							<div id="icons">
 
