--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
 
 	<div id="B-container">
 
-		<div id="backToTopFunction"></div>
+		<div id="backToTopFunction">
+
+			<div id="pic"></div>
+
+			<p>go top</p>
+
+		</div>
 
 		<div id="navs">
 
@@ -122,9 +128,9 @@
 
 							<li id="blogsList">fourms</li>
 
-							<li id="blogsList">columbia organic</li>
+							<li id="blogsList">gallery</li>
 
-							<li id="blogsList">ethiopia robusta</li>
+							<li id="blogsList">reviews</li>
 
 						</ul>
 
@@ -227,6 +233,60 @@
 									<li id="aboutUsList">reviews</li>
 
 								</ul>
+
+							</div>
+
+							<div id="navBarProducts">
+
+								<div id="productsFront">
+
+									<p>products</p>
+
+									<div id="arrow"></div>
+
+								</div>
+
+								<ul class="productsLists" id="productsLists">
+
+									<li id="productsList">peru whole bean</li>
+
+									<li id="productsList">ethiopia organic mix</li>
+
+									<li id="productsList">columbia organic</li>
+
+									<li id="productsList">ethiopia robusta</li>
+
+								</ul>
+
+							</div>
+
+							<div id="navBarBlogs">
+
+								<div id="blogsFront">
+
+									<p>blogs</p>
+
+									<div id="arrow"></div>
+
+								</div>
+
+								<ul class="blogLists" id="blogLists">
+
+									<li id="blogList">testimonials</li>
+
+									<li id="blogList">fourms</li>
+
+									<li id="blogList">gallery</li>
+
+									<li id="blogList">reviews</li>
+
+								</ul>
+
+							</div>
+
+							<div id="contacts">
+
+								<p>contacts</p>
 
 							</div>
 
