--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 
 									<p>home</p>
 
-									<div id="arrow"></div>
+									<div id="homeArrow"></div>
 
 								</div>
 
@@ -218,7 +218,7 @@
 
 									<p>about us</p>
 
-									<div id="arrow"></div>
+									<div id="aboutUsArrow"></div>
 
 								</div>
 
@@ -242,7 +242,7 @@
 
 									<p>products</p>
 
-									<div id="arrow"></div>
+									<div id="productsArrow"></div>
 
 								</div>
 
@@ -266,7 +266,7 @@
 
 									<p>blogs</p>
 
-									<div id="arrow"></div>
+									<div id="blogsArrow"></div>
 
 								</div>
 
