--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
 
 						<ul id="hidden">
 
-							<li id="homeList">natural coffee</li>
+							<li id="list">natural coffee</li>
 
-							<li id="homeList">coffee house</li>
+							<li id="list">coffee house</li>
 
-							<li id="homeList">coffee shop</li>
+							<li id="list">coffee shop</li>
 
-							<li id="homeList">craft coffee</li>
+							<li id="list">craft coffee</li>
 
-							<li id="homeList">narutal coffee rtl</li>
+							<li id="list">narutal coffee rtl</li>
 
 						</ul>
 
@@ -76,13 +76,13 @@
 
 						<ul id="hidden">
 
-							<li id="aboutUsList">testimonials</li>
+							<li id="list">testimonials</li>
 
-							<li id="aboutUsList">blogs</li>
+							<li id="list">blogs</li>
 
-							<li id="aboutUsList">gallery</li>
+							<li id="list">gallery</li>
 
-							<li id="aboutUsList">reviews</li>
+							<li id="list">reviews</li>
 
 						</ul>
 
@@ -100,13 +100,13 @@
 
 						<ul id="hidden">
 
-							<li id="productsList">peru whole bean</li>
+							<li id="list">peru whole bean</li>
 
-							<li id="productsList">ethiopia organic mix</li>
+							<li id="list">ethiopia organic mix</li>
 
-							<li id="productsList">columbia organic</li>
+							<li id="list">columbia organic</li>
 
-							<li id="productsList">ethiopia robusta</li>
+							<li id="list">ethiopia robusta</li>
 
 						</ul>
 
@@ -124,13 +124,13 @@
 
 						<ul id="hidden">
 
-							<li id="blogsList">testimonials</li>
+							<li id="list">testimonials</li>
 
-							<li id="blogsList">fourms</li>
+							<li id="list">fourms</li>
 
-							<li id="blogsList">gallery</li>
+							<li id="list">gallery</li>
 
-							<li id="blogsList">reviews</li>
+							<li id="list">reviews</li>
 
 						</ul>
 
@@ -340,18 +340,113 @@
 
 					<div id="logo"></div>
 
-					<ul>
-						<p id="home">home</p>
+					<div id="topOneNavBar">
 
-						<li><span>about us</span></li>
+						<div id="home">
 
-						<li><span>products</span></li>
+							<div id="front">
 
-						<li><span>blog</span></li>
+								<p>home</p>
 
-						<li><span>contacts</span></li>
+								<div id="arrow"></div>
 
-					</ul>
+							</div>
+
+							<ul id="hidden">
+
+								<li id="list">natural coffee</li>
+
+								<li id="list">coffee house</li>
+
+								<li id="list">coffee shop</li>
+
+								<li id="list">craft coffee</li>
+
+								<li id="list">narutal coffee rtl</li>
+
+							</ul>
+
+						</div>
+
+						<div id="aboutUs">
+
+							<div id="front">
+
+								<p>about us</p>
+
+								<div id="arrow"></div>
+
+							</div>
+
+							<ul id="hidden">
+
+								<li id="list">testimonials</li>
+
+								<li id="list">blogs</li>
+
+								<li id="list">gallery</li>
+
+								<li id="list">reviews</li>
+
+							</ul>
+
+						</div>
+
+						<div id="products">
+
+							<div id="front">
+
+								<p>products</p>
+
+								<div id="arrow"></div>
+
+							</div>
+
+							<ul id="hidden">
+
+								<li id="list">peru whole bean</li>
+
+								<li id="list">ethiopia organic mix</li>
+
+								<li id="list">columbia organic</li>
+
+								<li id="list">ethiopia robusta</li>
+
+							</ul>
+
+						</div>
+
+						<div id="blogs">
+
+							<div id="front">
+
+								<p>blogs</p>
+
+								<div id="arrow"></div>
+
+							</div>
+
+							<ul id="hidden">
+
+								<li id="list">testimonials</li>
+
+								<li id="list">fourms</li>
+
+								<li id="list">gallery</li>
+
+								<li id="list">reviews</li>
+
+							</ul>
+
+						</div>
+
+						<div id="contacts">
+
+							<p>contacts</p>
+
+						</div>
+
+					</div>
 
 				</div>
 
