--- a/index.html
+++ b/index.html
@@ -198,15 +198,15 @@
 
 								<ul class="homeLists" id="homeLists">
 
-									<li id="homeList">natural coffee</li>
+									<li id="list">natural coffee</li>
 
-									<li id="homeList">coffee house</li>
+									<li id="list">coffee house</li>
 
-									<li id="homeList">coffee shop</li>
+									<li id="list">coffee shop</li>
 
-									<li id="homeList">craft coffee</li>
+									<li id="list">craft coffee</li>
 
-									<li id="homeList">narutal coffee rtl</li>
+									<li id="list">narutal coffee rtl</li>
 
 								</ul>
 
@@ -224,13 +224,13 @@
 
 								<ul class="aboutUsLists" id="aboutUsLists">
 
-									<li id="aboutUsList">testimonials</li>
+									<li id="list">testimonials</li>
 
-									<li id="aboutUsList">blogs</li>
+									<li id="list">blogs</li>
 
-									<li id="aboutUsList">gallery</li>
+									<li id="list">gallery</li>
 
-									<li id="aboutUsList">reviews</li>
+									<li id="list">reviews</li>
 
 								</ul>
 
@@ -248,13 +248,13 @@
 
 								<ul class="productsLists" id="productsLists">
 
-									<li id="productsList">peru whole bean</li>
+									<li id="list">peru whole bean</li>
 
-									<li id="productsList">ethiopia organic mix</li>
+									<li id="list">ethiopia organic mix</li>
 
-									<li id="productsList">columbia organic</li>
+									<li id="list">columbia organic</li>
 
-									<li id="productsList">ethiopia robusta</li>
+									<li id="list">ethiopia robusta</li>
 
 								</ul>
 
@@ -272,13 +272,13 @@
 
 								<ul class="blogLists" id="blogLists">
 
-									<li id="blogList">testimonials</li>
+									<li id="list">testimonials</li>
 
-									<li id="blogList">fourms</li>
+									<li id="list">fourms</li>
 
-									<li id="blogList">gallery</li>
+									<li id="list">gallery</li>
 
-									<li id="blogList">reviews</li>
+									<li id="list">reviews</li>
 
 								</ul>
 
