--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 		</div>
 
-		<div id="navs">
+		<div id="C-navs">
 
 			<div id="navBar">
 
@@ -553,13 +553,13 @@
 
 						<div id="bgOne"></div>
 
-						<p id="two">01</p>
+						<p id="one">01</p>
 
 					</div>
 
-					<p id="three">arabica green</p>
+					<p id="two">arabica green</p>
 
-					<p id="four">curabitur semper erat a lacus consequat, sit amet quam convallis.</p>
+					<p id="three">curabitur semper erat a lacus consequat, sit amet quam convallis.</p>
 
 				</div>
 
@@ -569,13 +569,13 @@
 
 						<div id="bgTwo"></div>
 
-						<p id="two">02</p>
+						<p id="one">02</p>
 
 					</div>
 
-					<p id="three">arabica roasted</p>
+					<p id="two">arabica roasted</p>
 
-					<p id="four">praesent at faucibus justo, eu semper massa viverra luctus.</p>
+					<p id="three">praesent at faucibus justo, eu semper massa viverra luctus.</p>
 
 				</div>
 
@@ -585,13 +585,13 @@
 
 						<div id="bgThree"></div>
 
-						<p id="two">03</p>
+						<p id="one">03</p>
 
 					</div>
 
-					<p id="three">robusta roasted</p>
+					<p id="two">robusta roasted</p>
 
-					<p id="four">fusce venenatis ante ac interdum faucibus proin nunc.</p>
+					<p id="three">fusce venenatis ante ac interdum faucibus proin nunc.</p>
 
 				</div>
 
@@ -601,13 +601,13 @@
 
 						<div id="bgFour"></div>
 
-						<p id="two">04</p>
+						<p id="one">04</p>
 
 					</div>
 
-					<p id="three">mixed sorts</p>
+					<p id="two">mixed sorts</p>
 
-					<p id="four">aenean hendrerit ligula ut facilisis convallis gravida suscipit.</p>
+					<p id="three">aenean hendrerit ligula ut facilisis convallis gravida suscipit.</p>
 
 				</div>
 
