--- a/index.html
+++ b/index.html
@@ -24,9 +24,35 @@
 
 		<div id="backToTopFunction">
 
-			<div id="pic"></div>
+			<div id="goToButton">
 
-			<p>go top</p>
+				<p id="oneArrow">▲</p>
+
+				<p id="two">go to</p>
+
+			</div>
+
+			<div class="goToContents" id="goToContents">
+
+				<p id="goToTopOne">scroll to top</p>
+
+				<p id="goToTopThree">establishment</p>
+
+				<p id="goToMidOne">types</p>
+
+				<p id="goToMidTwo">sensation</p>
+
+				<p id="goToMidThree">features</p>
+
+				<p id="goToMidFour">demonstration</p>
+
+				<p id="goToBottomOne">varieties</p>
+
+				<p id="goToBottomTwo">shop</p>
+
+				<p id="goToBottomThree">address</p>
+
+			</div>
 
 		</div>
 
@@ -626,8 +652,6 @@
 				</div>
 
 				<div id="bgTwo">
-
-					<!-- <p id="one">divine</p> -->
 
 					<p id="one">divine <br> <span>aroma in every sip</span></p>
 
